add function to register a group of players

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 
         <div id="die"></div>
 
-        <button id="next" type="button" name="button">Start</button>
+        <div class="players">
+          <div id="players-list"></div>
+          <form id="add-player">
+            <input id="add-player-name" type="text" name="name" placeholder="Name" value="">
+            <button type="submit">+</button>
+          </form>
+        </div>
+
+        <button id="next" type="button">Start</button>
       </aside>
       <section id="board"></section>
     </main>
